--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <body>
     <div id="page">
             <header>
-                <div class="top-logo">
-                    <img src="images/logo_top.png" alt="masteralb_logo"/>
-                </div>
+                <h1 class="top-logo">
+                    <img src="images/logo_top.png" alt="Masteralb"/>
+                </h1>
                 <!--.top-logo-->
             </header>
         <main class="main-container">
@@ -25,35 +25,35 @@
                         <form>
                            <div class="input-block">
                                <label for="user_name">
-                                   <img src="images/glyphicons_5_user.png" alt="glyph_user">
+                                   <img src="images/glyphicons_5_user.png" alt="Username">
                                </label>                               
                                <input type="text" name="user-name" placeholder="Username">
                            </div>
                            <!--.input-block-->
                            <div class="input-block">
                                <label for="user-password">
-                                   <img src="images/glyphicons_1_lock.png" alt="glyph_user">
+                                   <img src="images/glyphicons_1_lock.png" alt="Password">
                                </label>                               
                                <input type="text" name="user-password" placeholder="Password">
                            </div>
                            <!--.input-block-->
                            <div class="input-block">
                                <label for="user-conifrm-password">
-                                   <img src="images/glyphicons_1_lock.png" alt="glyph_user">
+                                   <img src="images/glyphicons_1_lock.png" alt="Confirm Password">
                                </label>                               
                                <input type="text" name="user-conifrm-password" placeholder="Confirm Password">
                            </div>
                            <!--.input-block-->
                            <div class="input-block">
                                <label for="user-email">
-                                   <img src="images/glyphicons_2_envelope.png" alt="glyph_user">
+                                   <img src="images/glyphicons_2_envelope.png" alt="Email">
                                </label>                               
                                <input type="text" name="user-email" placeholder="Email">
                            </div>
                            <!--.input-block-->
                            <div class="input-block">
                                <label for="user_location">
-                                   <img src="images/glyphicons_3_google_maps.png" alt="glyph_user">
+                                   <img src="images/glyphicons_3_google_maps.png" alt="Location">
                                </label>                               
                                <select>
                                    <option select hidden>Your Location</option>
@@ -87,14 +87,14 @@
                         <form>
                            <div class="input-block">
                                <label for="user_name">
-                                   <img src="images/glyphicons_5_user.png" alt="glyph_user">
+                                   <img src="images/glyphicons_5_user.png" alt="Username">
                                </label>                               
                                <input type="text" name="user-name" placeholder="Your Name">
                            </div>
                            <!--.input-block-->
                            <div class="input-block">
                                <label for="user-email">
-                                   <img src="images/glyphicons_2_envelope.png" alt="glyph_email">
+                                   <img src="images/glyphicons_2_envelope.png" alt="Email">
                                </label>                               
                                <input type="text" name="user-email" placeholder="Your Email">
                            </div>
@@ -132,14 +132,14 @@
                         <form>
                            <div class="input-block">
                                <label for="user_name">
-                                   <img src="images/glyphicons_5_user.png" alt="glyph_user">
+                                   <img src="images/glyphicons_5_user.png" alt="Username">
                                </label>                               
                                <input type="text" name="user-name" placeholder="Username">
                            </div>
                            <!--.input-block-->
                            <div class="input-block">
                                <label for="user-password">
-                                   <img src="images/glyphicons_1_lock.png" alt="glyph_password">
+                                   <img src="images/glyphicons_1_lock.png" alt="Password">
                                </label>                               
                                <input type="text" name="user-password" placeholder="Password">
                            </div>
@@ -171,14 +171,14 @@
                         <form>
                            <div class="input-block">
                                <label for="user_email">
-                                   <img src="images/glyphicons_2_envelope.png" alt="glyph_email">
+                                   <img src="images/glyphicons_2_envelope.png" alt="Email">
                                </label>                               
                                <input type="text" name="user-email" placeholder="Enter your Email">
                            </div>
                            <!--.input-block-->
                            <div class="input-block">
                                <label for="user-phone">
-                                   <img src="images/glyphicons_4_phone.png" alt="glyph_phone">
+                                   <img src="images/glyphicons_4_phone.png" alt="Phone">
                                </label>                               
                                <input type="text" name="user-phone" placeholder="Enter your Phone number">
                            </div>
@@ -201,7 +201,7 @@
                         <form>
                            <div class="input-block">
                                <label for="user_email">
-                                   <img src="images/glyphicons_2_envelope.png" alt="glyph_email">
+                                   <img src="images/glyphicons_2_envelope.png" alt="Email">
                                </label>                               
                                <input type="text" name="user-email" placeholder="Enter your Email">
                            </div>
